<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".auth.AuthFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/text_default"
        android:text="@string/auth_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_nick"
        android:textColor="@color/text_default"
        android:inputType="textPersonName"
        android:id="@+id/field_nick"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_password"
        android:textColor="@color/text_default"
        android:inputType="textPassword"
        android:id="@+id/field_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_action_login"
        android:background="@drawable/top_button_background"
        android:id="@+id/login"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/auth_action_signup"
        android:background="@drawable/center_button_background"
        android:id="@+id/signup"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/auth_action_back"
        android:background="@drawable/bottom_button_background"
        android:id="@+id/back"/>

</LinearLayout>