<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_container_padding"
    android:orientation="vertical"
    tools:context=".PauseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_title"
        android:textSize="@dimen/pause_title_text_size"
        android:textColor="@color/text_default"
        android:gravity="center"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/pause_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_new_game"
        android:textColor="@color/text_light_default"
        android:background="@drawable/top_button_background"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/pause_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_continue_game"
        android:textColor="@color/text_light_default"
        android:background="@drawable/center_button_background"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/pause_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        android:textColor="@color/text_light_default"
        android:background="@drawable/center_button_background"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/pause_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_exit"
        android:textColor="@color/text_light_default"
        android:background="@drawable/bottom_button_background"
        android:layout_marginTop="3dp"/>

</LinearLayout>